<resources>
    <string name="app_name">Meeting Room Guide</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="quick_book">Quick Book </string>
    <string name="title_activity_quick_book">QuickBook</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="save_event">Save Event</string>

</resources>
