<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.synerzip.meetingRoomGuide.QuickBook">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/emailView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailText"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/emailView"
        android:layout_marginStart="166dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/titleText"
        android:layout_below="@+id/emailText"
        android:layout_alignStart="@+id/emailText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/titleView"
        android:layout_below="@+id/emailText"
        android:layout_toStartOf="@+id/emailText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:id="@+id/startDateView"
        android:layout_below="@+id/titleText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="datetime"
        android:ems="10"
        android:id="@+id/startDateText"
        android:layout_alignTop="@+id/startDateView"
        android:layout_alignStart="@+id/titleText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:id="@+id/endDateView"
        android:layout_below="@+id/startDateText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="datetime"
        android:ems="10"
        android:id="@+id/endDateText"
        android:layout_below="@+id/startDateText"
        android:layout_alignStart="@+id/startDateText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_event"
        android:id="@+id/saveEvent"
        android:layout_below="@+id/endDateText"
        android:layout_toEndOf="@+id/startDateView"
        android:layout_marginTop="72dp" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_below="@+id/saveEvent"
        android:layout_alignEnd="@+id/endDateText" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:layout_alignTop="@+id/datePicker"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
